[gd_scene load_steps=8 format=3 uid="uid://4qcduhyvqeli"]

[ext_resource type="Script" path="res://scripts/ui/level_finished_menu.gd" id="1_a7nuf"]
[ext_resource type="Theme" uid="uid://bgl1w0ys3q4oe" path="res://resources/main_theme.tres" id="1_o5ney"]
[ext_resource type="Texture2D" uid="uid://t44831jjb3bg" path="res://assets/textures/level_finished_texture.png" id="2_hlpmp"]
[ext_resource type="AudioStream" uid="uid://did8kxgsiif47" path="res://assets/audio/other/game_won_music.ogg" id="4_jx3ik"]

[sub_resource type="Animation" id="Animation_5wm05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8vmyq"]
resource_name = "start"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hnjw"]
_data = {
"RESET": SubResource("Animation_5wm05"),
"start": SubResource("Animation_8vmyq")
}

[node name="LevelFinishedMenu" type="Control" node_paths=PackedStringArray("first_element_to_focus")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o5ney")
script = ExtResource("1_a7nuf")
first_element_to_focus = NodePath("QuitToMainMenuButton")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hlpmp")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="QuitToMainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 556.0
offset_right = 480.0
offset_bottom = 654.0
text = "QuitToMainMenu"

[node name="MusicTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jx3ik")
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2hnjw")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="QuitToMainMenuButton" to="." method="_on_quit_to_main_menu_button_pressed"]
